# OC_Events_RAG_API

./: .env.example  .gitignore  Dockerfile  README.md  app_streamlit.py  evaluation_dataset.json  pyproject.toml  requirements.txt
api/: main.py
scripts/: create_vector_store.py  evaluate_rag.py  fetch_data.py
src/puls_events_rag/: config.py  rag_chain.py
tests/: test_api.py  test_data_pipeline.py  test_rag_chain.py
