[project]
name = "puls-events-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Cyrille Elie",email = "cyrille.elie@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.26,<0.4.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "mistralai (>=1.8.2,<2.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "langchain-huggingface (>=0.3.0,<0.4.0)",
    "langchain-mistralai (>=0.2.10,<0.3.0)",
    "flask (>=3.1.1,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]

[tool.poetry]
packages = [{include = "puls_events_rag", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ragas = "^0.2.15"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
