[project]
name = "puls-events-rag"
version = "0.1.0"
description = "POC d'un chatbot RAG avec Flask, FAISS et Mistral."
authors = [
    {name = "Cyrille Elie",email = "cyrille.elie@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    # --- LangChain Stack (Harmonisé sur la v0.3.x) ---
    "langchain>=0.3.0,<0.4.0",
    "langchain-core>=0.3.68,<0.4.0",       # Requis par Gemini
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-mistralai>=0.2.10,<0.3.0",    # Compatible avec le core v0.3.x
    "langchain-google-genai>=2.1.9,<3.0.0",
    "langchain-huggingface>=0.3.0,<0.4.0",

    # --- Autres dépendances ---
    "faiss-cpu>=1.8.0,<2.0.0",
    "sentence-transformers>=2.7.0,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "requests>=2.32.0,<3.0.0",
    "httpx>=0.27.0,<0.29.0",
    "flask>=3.0.0,<4.0.0",
    "gunicorn>=22.0.0,<24.0.0",
    "tabulate (>=0.9.0,<0.10.0)"
]

[tool.poetry]
name = "puls-events-rag"
version = "0.1.0"
description = "POC d'un chatbot RAG avec Flask, FAISS et Mistral."
authors = ["Cyrille Elie <cyrille.elie@gmail.com>"]
packages = [{include = "puls_events_rag", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ragas = "^0.2.15"
streamlit = "^1.46.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
